// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentBlock Renderer Displays ContentBlock with Media displaying in the background 1`] = `
<div
  className="overflow-hidden p-relative"
  style={Object {}}
>
  <div
    className="fill embed-responsive embed-responsive-1by1"
    style={
      Object {
        "zIndex": 0,
      }
    }
  />
  <div
    className="container-fluid max-width-1100 py-6 opacity-0 opacity-100"
  >
    <div
      className="row align-items-center"
    >
      <div
        className="col-12 col-md-12 order-first px-3 my-2"
      />
      <div
        className="col-12 col-md text-center px-3 my-2"
      >
        <div
          className="max-width-800 mx-auto"
        >
          <h5
            className="mt-3 subtitle text-secondary text-dark"
          />
          <h2
            className="font-weight-bold text-dark"
          />
          <div
            className="pb-3 text-dark"
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentBlock Renderer Displays ContentBlock with normal layout 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="container-fluid max-width-1100 py-6 opacity-0 opacity-100"
    >
      <div
        className="row align-items-center"
      >
        <div
          className="col-12 col-md-12 order-first px-3 my-2"
        />
        <div
          className="col-12 col-md text-center px-3 my-2"
        >
          <div
            className="max-width-800 mx-auto"
          >
            <h5
              className="mt-3 subtitle text-secondary text-dark"
            />
            <h2
              className="font-weight-bold text-dark"
            />
            <div
              className="pb-3 text-dark"
            />
            <div
              className=""
            />
            <div
              className=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
